--- a/src/main/webapp/app/entities/core/organization/organization-detail.component.html
+++ b/src/main/webapp/app/entities/core/organization/organization-detail.component.html
@@ -25,21 +25,21 @@
                 <dd>
                     <span>{{organization.description}}</span>
                 </dd>
-                <dt><span jhiTranslate="gatewayApp.coreOrganization.logoURL">Logo URL</span></dt>
+                <dt><span jhiTranslate="gatewayApp.coreOrganization.logoURL">Logo</span></dt>
                 <dd>
-                    <span>{{organization.logoURL}}</span>
+                    <span><img src={{organization.logoURL}} alt="" width="100" height="100"></span>
                 </dd>
-                <dt><span jhiTranslate="gatewayApp.coreOrganization.logoURLMobile">Logo URL Mobile</span></dt>
+                <dt><span jhiTranslate="gatewayApp.coreOrganization.logoURLMobile">Mobile Logo</span></dt>
                 <dd>
-                    <span>{{organization.logoURLMobile}}</span>
+                    <span><img src={{organization.logoURLMobile}} alt="" width="100" height="100"></span>
                 </dd>
-                <dt><span jhiTranslate="gatewayApp.coreOrganization.favIconURL">Fav Icon URL</span></dt>
+                <dt><span jhiTranslate="gatewayApp.coreOrganization.favIconURL">Fav Icon</span></dt>
                 <dd>
-                    <span>{{organization.favIconURL}}</span>
+                    <span><img src={{organization.favIconURL}} alt="" width="100" height="100"></span>
                 </dd>
-                <dt><span jhiTranslate="gatewayApp.coreOrganization.mobileIconURL">Mobile Icon URL</span></dt>
+                <dt><span jhiTranslate="gatewayApp.coreOrganization.mobileIconURL">Mobile Icon</span></dt>
                 <dd>
-                    <span>{{organization.mobileIconURL}}</span>
+                    <span><img src={{organization.mobileIconURL}} alt="" width="100" height="100"></span>
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.coreOrganization.baiduVerificationCode">Baidu Verification Code</span></dt>
                 <dd>
