--- a/src/main/webapp/app/entities/core/organization/organization.component.html
+++ b/src/main/webapp/app/entities/core/organization/organization.component.html
@@ -79,7 +79,7 @@
             <tbody>
             <tr *ngFor="let organization of organizations ;trackBy: trackId">
                 <!--<td><a [routerLink]="['/organization', organization.id, 'view' ]">{{organization.id}}</a></td>-->
-                <td>{{organization.logoURL}}</td>
+                <td><img src={{organization.logoURL}} alt="" width="100" height="100"></td>
                 <td>{{organization.name}}</td>
                 <td>{{organization.phone}}</td>
                 <td>{{organization.siteTitle}}</td>
