--- a/src/main/webapp/app/entities/core/post/post-detail.component.html
+++ b/src/main/webapp/app/entities/core/post/post-detail.component.html
@@ -51,7 +51,7 @@
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.corePost.featuredMedia">Featured Media</span></dt>
                 <dd>
-                    <span>{{post.featuredMedia}}</span>
+                    <span><img src={{post.featuredMedia}} alt="" width="100" height="100"></span>
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.corePost.subTitle">Sub Title</span></dt>
                 <dd>
