--- a/src/main/webapp/app/entities/factcheck/claimant/claimant-detail.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant-detail.component.html
@@ -17,9 +17,9 @@
                 <dd>
                     <span>{{claimant.description}}</span>
                 </dd>
-                <dt><span jhiTranslate="gatewayApp.factcheckClaimant.imageURL">Image URL</span></dt>
+                <dt><span jhiTranslate="gatewayApp.factcheckClaimant.imageURL">Claimant</span></dt>
                 <dd>
-                    <span>{{claimant.imageURL}}</span>
+                    <span><img src={{claimant.imageURL}} alt="" width="100" height="100"></span>
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.factcheckClaimant.clientId">Client Id</span></dt>
                 <dd>
