--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-detail.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-detail.component.html
@@ -55,7 +55,7 @@
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.factcheckFactcheck.featuredMedia">Featured Media</span></dt>
                 <dd>
-                    <span>{{factcheck.featuredMedia}}</span>
+                    <span><img src={{factcheck.featuredMedia}} alt="" width="100" height="100"></span>
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.factcheckFactcheck.subTitle">Sub Title</span></dt>
                 <dd>
