--- a/src/main/webapp/app/entities/factcheck/rating/rating-detail.component.html
+++ b/src/main/webapp/app/entities/factcheck/rating/rating-detail.component.html
@@ -15,7 +15,7 @@
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.factcheckRating.iconURL">Icon URL</span></dt>
                 <dd>
-                    <span>{{rating.iconURL}}</span>
+                    <span><img src={{rating.iconURL}} alt="" width="100" height="100"></span>
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.factcheckRating.isDefault">Is Default</span></dt>
                 <dd>
