--- a/src/main/webapp/app/entities/core/dega-user/dega-user.component.html
+++ b/src/main/webapp/app/entities/core/dega-user/dega-user.component.html
@@ -55,7 +55,7 @@
             <tbody>
             <tr *ngFor="let degaUser of degaUsers ;trackBy: trackId">
                 <!--<td><a [routerLink]="['/dega-user', degaUser.id, 'view' ]">{{degaUser.id}}</a></td>-->
-                <td>{{degaUser.profilePicture}}</td>
+                <td><img src={{degaUser.profilePicture}} alt="" width="100" height="100"></td>
                 <!--<td>{{degaUser.firstName}}</td>
                 <td>{{degaUser.lastName}}</td>-->
                 <td>{{degaUser.displayName}}</td>
