--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -12,7 +12,7 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.title" for="field_title">Title</label>
                     <input type="text" class="form-control" name="title" id="field_title"
-                           [(ngModel)]="factcheck.title" (change)="bindSlug($event)" required/>
+                           [(ngModel)]="factcheck.title" required/>
                     <div [hidden]="!(editForm.controls.title?.dirty && editForm.controls.title?.invalid)">
                         <small class="form-text text-danger"
                                [hidden]="!editForm.controls.title?.errors?.required" jhiTranslate="entity.validation.required">
