--- a/src/main/webapp/app/entities/core/dega-user/dega-user-update.component.html
+++ b/src/main/webapp/app/entities/core/dega-user/dega-user-update.component.html
@@ -80,7 +80,7 @@
                     <textarea rows="5" type="text" class="form-control" name="description" id="field_description"
                               [(ngModel)]="degaUser.description" ></textarea>
                 </div>
-                <div class="form-group">
+                <!--<div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreDegaUser.slug" for="field_slug">Slug</label>
                     <input type="text" class="form-control" name="slug" id="field_slug"
                         [(ngModel)]="degaUser.slug" required/>
@@ -90,7 +90,7 @@
                         This field is required.
                         </small>
                     </div>
-                </div>
+                </div>-->
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreDegaUser.enabled" for="field_enabled">Enabled</label>
                     <input type="checkbox" class="form-control" name="enabled" id="field_enabled"
