--- a/src/main/webapp/app/entities/factcheck/claim/claim-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/claim-update.component.html
@@ -22,6 +22,7 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.description" for="field_description">Description</label>
+                    <span class="text-danger" [hidden]="claim.description">*</span>
                     <quill-editor [(ngModel)]="claim.description" name="description" id="field_description" [style]="{height: '200px'}" required></quill-editor>
                     <div [hidden]="!(editForm.controls.description?.dirty && editForm.controls.description?.invalid)">
                         <small class="form-text text-danger"
@@ -69,6 +70,7 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.reviewSources" for="field_reviewSources">Review Sources</label>
+                    <span class="text-danger" [hidden]="claim.reviewSources">*</span>
                     <textarea rows="5" type="text" class="form-control" name="reviewSources" id="field_reviewSources"
                               [(ngModel)]="claim.reviewSources" required ></textarea>
                     <div [hidden]="!(editForm.controls.reviewSources?.dirty && editForm.controls.reviewSources?.invalid)">
@@ -80,6 +82,7 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.review" for="field_review">Review</label>
+                    <span class="text-danger" [hidden]="claim.review">*</span>
                     <textarea rows="5" type="text" class="form-control" name="review" id="field_review"
                               [(ngModel)]="claim.review" required ></textarea>
                     <div [hidden]="!(editForm.controls.review?.dirty && editForm.controls.review?.invalid)">
