--- a/src/main/webapp/app/entities/core/media/featured-media/featured-media-upload-dialog.component.html
+++ b/src/main/webapp/app/entities/core/media/featured-media/featured-media-upload-dialog.component.html
@@ -21,12 +21,14 @@
 <div class="modal-body">
         <div class="pad-left" *ngIf="media" class="col-sm-12 col-md-12 col-lg-12">
             <div class="row">
-                <div *ngFor="let media of media;trackBy: trackId" class="col-sm-3 col-md-1 col-lg-1" (click)="uploadImage(media.url)">
+                <div *ngFor="let media of media;trackBy: trackId" class="col-sm-3 col-md-1 col-lg-1" (click)="onSearch(media.url)">
                     <img src={{media.url}} alt="Image" width="100" height="100" class="img-bottom">
                 </div>
             </div>
         </div>
 </div>
+ <h1>OR Upload</h1>
+<input type="file" name="Brows" class="upload" (change)="_onChange($event.target.files)" accept="image/*" #fileInput>
 <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
         <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
