--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -39,7 +39,8 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.introduction" for="field_introduction">Introduction</label>
                     <span class="text-danger" [hidden]="factcheck.introduction">*</span>
-                    <quill-editor [(ngModel)]="factcheck.introduction" name="introduction" id="field_introduction" [style]="{height: '200px'}" required></quill-editor>
+                    <quill-editor [(ngModel)]="factcheck.introduction" name="introduction" id="field_introduction" [style]="{height: '200px'}"
+                                  (onEditorCreated)="getEditorInstance($event)" required></quill-editor>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.excerpt" for="field_excerpt">Excerpt</label>
@@ -53,7 +54,8 @@
                     <!--<input type="text" class="form-control" name="summary" id="field_summary"
                            [(ngModel)]="factcheck.summary" required/>-->
                     <span class="text-danger" [hidden]="factcheck.summary">*</span>
-                    <quill-editor [(ngModel)]="factcheck.summary" name="summary" id="field_summary" [style]="{height: '200px'}" required></quill-editor>
+                    <quill-editor [(ngModel)]="factcheck.summary" name="summary" id="field_summary" [style]="{height: '200px'}"
+                                  (onEditorCreated)="getEditorInstance2($event)" required></quill-editor>
                     <!--<div [hidden]="!(editForm.controls.summary?.dirty && editForm.controls.summary?.invalid)">
                         <small class="form-text text-danger"
                                [hidden]="!editForm.controls.summary?.errors?.required" jhiTranslate="entity.validation.required">
@@ -136,6 +138,7 @@
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.featuredMedia" for="field_featuredMedia">Featured Media</label>
                     <button id="field_featuredMedia" class="btn btn-primary jh-create-entity create-media"
                             [routerLink]="['/', { outlets: { popup: 'featured-media/upload'} }]"
+                            [queryParams]="{ media_type: 'feature'}"
                             replaceUrl="true" type="button">
                         <fa-icon [icon]="'plus'"></fa-icon>
                         <span class="hidden-sm-down"  jhiTranslate="gatewayApp.coreMedia.home.uploadMediaLabel">
@@ -143,7 +146,7 @@
                         </span>
                     </button>
                     <img src={{factcheck.featuredMedia}} alt="" width="100" height="100">
-                    <div *ngIf="getImageSrcUrl()">
+                    <div *ngIf="factcheck.featuredMedia">
                         <span [(ngModel)]="factcheck.featuredMedia" name="featuredMedia" ngDefaultControl></span>
                     </div>
                 </div>
