--- a/src/main/webapp/app/entities/core/dega-user/dega-user-update.component.html
+++ b/src/main/webapp/app/entities/core/dega-user/dega-user-update.component.html
@@ -64,6 +64,7 @@
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreDegaUser.profilePicture" for="field_profilePicture">Profile Picture</label>
                     <button id="field_profilePicture" class="btn btn-primary jh-create-entity create-media"
                             [routerLink]="['/', { outlets: { popup: 'featured-media/upload'} }]"
+                            [queryParams]="{ media_type: 'feature'}"
                             replaceUrl="true" type="button">
                         <fa-icon [icon]="'plus'"></fa-icon>
                         <span class="hidden-sm-down"  jhiTranslate="gatewayApp.coreMedia.home.uploadMediaLabel">
@@ -71,7 +72,7 @@
                         </span>
                     </button>
                     <img src={{degaUser.profilePicture}} alt="" width="100" height="100">
-                    <div *ngIf="getImageSrcUrl()">
+                    <div *ngIf="degaUser.profilePicture">
                         <span [(ngModel)]="degaUser.profilePicture" name="featuredMedia" ngDefaultControl></span>
                     </div>
                 </div>
