--- a/src/main/webapp/app/entities/factcheck/claim/claim-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/claim-update.component.html
@@ -23,7 +23,8 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.description" for="field_description">Description</label>
                     <span class="text-danger" [hidden]="claim.description">*</span>
-                    <quill-editor [(ngModel)]="claim.description" name="description" id="field_description" [style]="{height: '200px'}" required></quill-editor>
+                    <quill-editor [(ngModel)]="claim.description" name="description" id="field_description"
+                                  (onEditorCreated)="getEditorInstance($event)" [style]="{height: '200px'}" required></quill-editor>
                     <div [hidden]="!(editForm.controls.description?.dirty && editForm.controls.description?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.description?.errors?.required" jhiTranslate="entity.validation.required">
