--- a/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
@@ -37,6 +37,7 @@
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaimant.imageURL" for="field_imageURL">Image URL</label>
                     <button id="field_imageURL" class="btn btn-primary jh-create-entity create-media"
                             [routerLink]="['/', { outlets: { popup: 'featured-media/upload'} }]"
+                            [queryParams]="{ media_type: 'feature'}"
                             replaceUrl="true" type="button">
                         <fa-icon [icon]="'plus'"></fa-icon>
                         <span class="hidden-sm-down"  jhiTranslate="gatewayApp.coreMedia.home.uploadMediaLabel">
@@ -44,7 +45,7 @@
                         </span>
                     </button>
                     <img src={{claimant.imageURL}} alt="" width="100" height="100">
-                    <div *ngIf="getImageSrcUrl()">
+                    <div *ngIf="claimant.imageURL">
                         <span [(ngModel)]="claimant.imageURL" name="featuredMedia" ngDefaultControl></span>
                     </div>
                 </div>
