--- a/src/main/webapp/app/entities/core/media/featured-media/featured-media-upload-dialog.component.html
+++ b/src/main/webapp/app/entities/core/media/featured-media/featured-media-upload-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <h4 class="modal-title">Featured Media OR Upload</h4>
-    <input type="file" name="Brows" class="pad-left" (change)="uploadImage($event.target.files)" accept="image/*" #fileInput>
+    <input type="file" name="Brows" class="pad-left" (change)="uploadImageFromLocalSystem($event.target.files)" accept="image/*" #fileInput>
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
             (click)="clear()">&times;</button>
 </div>
