--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -1,7 +1,7 @@
 
 <div class="row justify-content-center">
     <div class="col-8">
-        <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
+        <form name="editForm" role="form" novalidate (ngSubmit)="saveOrPublish('Draft')" #editForm="ngForm">
             <h2 id="jhi-factcheck-heading" jhiTranslate="gatewayApp.factcheckFactcheck.home.createOrEditLabel">Create or edit a Factcheck</h2>
             <div>
                 <jhi-alert-error></jhi-alert-error>
@@ -29,9 +29,10 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.introduction" for="field_introduction">Introduction</label>
                     <span class="text-danger" [hidden]="factcheck.introduction">*</span>
-                    <jhi-quill-editor [original_content]="factcheck.introduction" (updated_content)="updateIntroductionFormData($event)"></jhi-quill-editor>
-                    <quill-editor [(ngModel)]="factcheck.introduction" name="introduction" id="field_introduction" [style]="{height: '200px'}"
-                                  (onEditorCreated)="getEditorInstance($event)" required></quill-editor>
+                    <jhi-quill-editor [original_content]="factcheck.introduction"
+                                      id="field_introduction"
+                                      (updated_content)="updateIntroductionFormData($event)">
+                    </jhi-quill-editor>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.excerpt" for="field_excerpt">Excerpt</label>
@@ -41,8 +42,11 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.summary" for="field_summary">Summary</label>
                     <span class="text-danger" [hidden]="factcheck.summary">*</span>
-                    <quill-editor [(ngModel)]="factcheck.summary" name="summary" id="field_summary" [style]="{height: '200px'}"
-                                  (onEditorCreated)="getEditorInstance2($event)" required></quill-editor>
+                    <jhi-quill-editor [original_content]="factcheck.summary"
+                                      id="field_summary"
+                                      (updated_content)="updateSummaryFormData($event)">
+                    </jhi-quill-editor>
+
                 </div>
 
                 <div class="form-group">
@@ -115,82 +119,9 @@
                         This field is required.
                     </small>
                 </div>
-                <form name="claimForm" [formGroup]="formGroup" novalidate #claimForm="ngForm" >
-                    <div formArrayName="claims" id="claimsArray" class="ng-valid">
-                        <div *ngFor="let group of claimsArray.controls; let i = index;" [formGroupName]="i">
-                            <h2 id="jhi-claim-heading"> Claim{{ i+1 }} </h2>
-                            <div class="form-group">
-                                <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.claim" for="field_claim1">Claim</label>
-                                <div class="input-group">
-                                    <input type="text" class="form-control" formControlName="claim" name="claim" id="field_claim1" required/>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.description" for="field_description">Description</label>
-                                <span class="text-danger">*</span>
-                                <quill-editor formControlName="description" name="description" id="field_description" [style]="{height: '200px'}" required></quill-editor>
-                            </div>
-                            <div class="form-group">
-                                <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.claimDate" for="field_claimDate">Claim Date</label>
-                                <div class="input-group">
-                                    <input id="field_claimDate" type="text" formControlName="claimDate" class="form-control" name="claimDate" ngbDatepicker  #claimDateDp="ngbDatepicker" />
-                                    <span class="input-group-append">
-                                        <button type="button" class="btn btn-secondary" (click)="claimDateDp.toggle()"><fa-icon [icon]="'calendar-alt'"></fa-icon></button>
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.claimSource" for="field_claimSource">Claim Source</label>
-                                <input type="text" class="form-control" formControlName="claimSource" name="claimSource" id="field_claimSource"
-                                       required/>
-                            </div>
-                            <div class="form-group">
-                                <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.checkedDate" for="field_checkedDate">Checked Date</label>
-                                <div class="input-group">
-                                    <input id="field_checkedDate" type="text" formControlName="checkedDate" class="form-control" name="checkedDate" ngbDatepicker  #checkedDateDp="ngbDatepicker"
-                                           required/>
-                                    <span class="input-group-append">
-                                        <button type="button" class="btn btn-secondary" (click)="checkedDateDp.toggle()"><fa-icon [icon]="'calendar-alt'"></fa-icon></button>
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.reviewSources" for="field_reviewSources">Review Sources</label>
-                                <input type="text" class="form-control" formControlName="reviewSources" name="reviewSources" id="field_reviewSources"
-                                      required/>
-                            </div>
-                            <div class="form-group">
-                                <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.review" for="field_review">Review</label>
-                                <input type="text" class="form-control" formControlName="review" name="review" id="field_review" required/>
-                            </div>
-                            <div class="form-group">
-                                <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.reviewTagLine" for="field_reviewTagLine">Review Tag Line</label>
-                                <input type="text" class="form-control" formControlName="reviewTagLine" name="reviewTagLine" id="field_reviewTagLine" />
-                            </div>
-                            <div class="form-group">
-                                <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.rating" for="field_rating">Rating</label>
-                                <select class="form-control" id="field_rating" formControlName="ratingId" name="ratingId" required>
-                                    <option *ngIf="!editForm.value.rating" [ngValue]="null" selected></option>
-                                    <option [ngValue]="ratingOption.id" *ngFor="let ratingOption of ratings; trackBy: trackRatingById">{{ratingOption.name}}</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.claimant" for="field_claimant">Claimant</label>
-                                <select class="form-control" id="field_claimant" formControlName="claimantId" name="claimantId" required>
-                                    <option *ngIf="!editForm.value.claimant" [ngValue]="null" selected></option>
-                                    <option [ngValue]="claimantOption.id" *ngFor="let claimantOption of claimants; trackBy: trackClaimantById">{{claimantOption.name}}</option>
-                                </select>
-                            </div>
-                            <button type="button" id="remove-claim" class="btn btn-danger"  (click)="removeClaim(i)">Remove</button>
-                        </div>
-                        <div class="pad-up-bottom">
-                            <button type="button" id="add-claim" class="btn btn-success" (click)="addClaim()">Add a Claim</button>
-                        </div>
-                        <div class="pad-up-bottom">
-                            <button type="button" id="add-pop-claim" class="btn btn-success" (click)="openDialogPopUp()">Add a Popup Claim</button>
-                        </div>
-                    </div>
-                </form>
+                <div class="pad-up-bottom">
+                    <button type="button" id="add-pop-claim" class="btn btn-success" (click)="openDialogPopUp()">Add a Popup Claim</button>
+                </div>
                 <div>
                     <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
                         <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
@@ -198,7 +129,7 @@
                     <button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary" *ngIf="showSave">
                         <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.savedraft">Save Draft</span>
                     </button>
-                    <button type="button" id="publish-entity" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary" *ngIf="showPublish" (click)="publish()">
+                    <button type="button" id="publish-entity" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary" *ngIf="showPublish" (click)="saveOrPublish('Publish')">
                         <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.publish">Publish</span>
                     </button>
                 </div>
