--- a/src/main/webapp/app/entities/factcheck/claim/claim.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/claim.component.html
@@ -1,7 +1,7 @@
 <div>
     <h2 id="page-heading">
         <span jhiTranslate="gatewayApp.factcheckClaim.home.title">Claims</span>
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-claim" (click)="openClaimantEditDialog(claim)">
+        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-claim" (click)="openClaimEditDialog(null)">
             <fa-icon [icon]="'plus'"></fa-icon>
             <span class="hidden-sm-down"  jhiTranslate="gatewayApp.factcheckClaim.home.createLabel">
             Create new Claim
@@ -59,7 +59,7 @@
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
                         <button type="submit"
-                                (click)="openClaimantEditDialog(claim)"
+                                (click)="openClaimEditDialog(claim)"
                                 class="btn btn-primary btn-sm">
                             <fa-icon [icon]="'pencil-alt'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
