file upload image selection dummy logic done

--- a/src/main/webapp/app/shared/quill-editor/quill-editor-file-upload.component.html
+++ b/src/main/webapp/app/shared/quill-editor/quill-editor-file-upload.component.html
@@ -1,7 +1,42 @@
 <h1 mat-dialog-title>Hi </h1>
 <div mat-dialog-content>
-    <p>Adding baby image</p>
+    <p>Adding image 1</p>
 </div>
 <div mat-dialog-actions>
-    <button (click)="onNoClick()" >Ok</button>
+    <a (click)="selectImage('http://jesperastrom.com/wordpress/wp-content/uploads/links.jpg')">
+        <img src="http://jesperastrom.com/wordpress/wp-content/uploads/links.jpg">
+    </a>
+</div>
+<div mat-dialog-content>
+    <p>Adding image 1</p>
+</div>
+
+<div mat-dialog-actions>
+    <a (click)="selectImage('http://jesperastrom.com/wordpress/wp-content/uploads/MGM2851.jpg')">
+        <img src="http://jesperastrom.com/wordpress/wp-content/uploads/MGM2851.jpg">
+    </a>
+</div>
+<div mat-dialog-content>
+    <p>Adding image 1</p>
+</div>
+
+<div mat-dialog-actions>
+    <a (click)="selectImage('http://jesperastrom.com/wordpress/wp-content/uploads/keyword-research.png')">
+        <img src="http://jesperastrom.com/wordpress/wp-content/uploads/keyword-research.png">
+    </a>
+</div>
+
+<div mat-dialog-content>
+    <p>Adding image 1</p>
+</div>
+<div mat-dialog-actions>
+    <a (click)="selectImage('http://jesperastrom.com/wordpress/wp-content/uploads/keyword.jpg')">
+        <img src="http://jesperastrom.com/wordpress/wp-content/uploads/keyword.jpg">
+    </a>
+</div>
+
+<div mat-dialog-actions>
+    <a (click)="selectImage('https://jesperastrom.com/wordpress/wp-content/uploads/Screen-shot-2013-03-05-at-11.37.26-PM.png')">
+        <img src="https://jesperastrom.com/wordpress/wp-content/uploads/Screen-shot-2013-03-05-at-11.37.26-PM.png">
+    </a>
 </div>
