--- a/src/main/webapp/app/entities/core/organization/organization-detail.component.html
+++ b/src/main/webapp/app/entities/core/organization/organization-detail.component.html
@@ -177,6 +177,14 @@
                 <dd>
                     <span>{{organization.lastUpdatedDate}}</span>
                 </dd>
+                <dt><span jhiTranslate="gatewayApp.coreOrganization.siteAddress">Site Address</span></dt>
+                <dd>
+                    <span>{{organization.siteAddress}}</span>
+                </dd>
+                <dt><span jhiTranslate="gatewayApp.coreOrganization.enableFactchecking">Enable Factchecking</span></dt>
+                <dd>
+                    <span>{{organization.enableFactchecking}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
