--- a/src/main/webapp/app/shared/quill-editor/quill-editor-file-upload.component.html
+++ b/src/main/webapp/app/shared/quill-editor/quill-editor-file-upload.component.html
@@ -1,42 +1,37 @@
-<h1 mat-dialog-title>Hi </h1>
-<div mat-dialog-content>
-    <p>Adding image 1</p>
+<div class="modal-header">
+    <h4 class="modal-title">Featured Media OR Upload</h4>
+    <input type="file" name="Brows" class="pad-left" (change)="uploadImageFromLocalSystem($event.target.files)" accept="image/*" #fileInput>
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
+            (click)="clear()">&times;</button>
 </div>
-<div mat-dialog-actions>
-    <a (click)="selectImage('http://jesperastrom.com/wordpress/wp-content/uploads/links.jpg')">
-        <img src="http://jesperastrom.com/wordpress/wp-content/uploads/links.jpg">
-    </a>
+<div class="row pad">
+    <div class="col-sm-12">
+        <form name="searchForm" class="form-inline">
+            <div class="input-group w-100 mt-3">
+                <input type="text" class="form-control" [(ngModel)]="currentSearch" id="currentSearch" name="currentSearch" placeholder="{{ 'gatewayApp.coreMedia.home.search' | translate }}">
+                <button class="input-group-append btn btn-info" (click)="search(currentSearch)">
+                    <fa-icon [icon]="'search'"></fa-icon>
+                </button>
+                <button class="input-group-append btn btn-danger" (click)="clearSearch()" *ngIf="currentSearch">
+                    <fa-icon [icon]="'trash-alt'"></fa-icon>
+                </button>
+            </div>
+        </form>
+    </div>
 </div>
-<div mat-dialog-content>
-    <p>Adding image 1</p>
+<div class="modal-body">
+    <div class="pad-left" *ngIf="media" class="col-sm-12 col-md-12 col-lg-12">
+        <div class="row">
+            <div *ngFor="let media of media;trackBy: trackId" class="col-sm-3 col-md-1 col-lg-1">
+                <a (click)="selectImage(media.url)">
+                    <img src={{media.url}} alt="Image" width="100" height="100" class="img-bottom">
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
-
-<div mat-dialog-actions>
-    <a (click)="selectImage('http://jesperastrom.com/wordpress/wp-content/uploads/MGM2851.jpg')">
-        <img src="http://jesperastrom.com/wordpress/wp-content/uploads/MGM2851.jpg">
-    </a>
-</div>
-<div mat-dialog-content>
-    <p>Adding image 1</p>
-</div>
-
-<div mat-dialog-actions>
-    <a (click)="selectImage('http://jesperastrom.com/wordpress/wp-content/uploads/keyword-research.png')">
-        <img src="http://jesperastrom.com/wordpress/wp-content/uploads/keyword-research.png">
-    </a>
-</div>
-
-<div mat-dialog-content>
-    <p>Adding image 1</p>
-</div>
-<div mat-dialog-actions>
-    <a (click)="selectImage('http://jesperastrom.com/wordpress/wp-content/uploads/keyword.jpg')">
-        <img src="http://jesperastrom.com/wordpress/wp-content/uploads/keyword.jpg">
-    </a>
-</div>
-
-<div mat-dialog-actions>
-    <a (click)="selectImage('https://jesperastrom.com/wordpress/wp-content/uploads/Screen-shot-2013-03-05-at-11.37.26-PM.png')">
-        <img src="https://jesperastrom.com/wordpress/wp-content/uploads/Screen-shot-2013-03-05-at-11.37.26-PM.png">
-    </a>
+<div class="modal-footer">
+    <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
+        <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
+    </button>
 </div>
