--- a/src/main/webapp/app/shared/quill-editor/quill-editor-file-upload.component.html
+++ b/src/main/webapp/app/shared/quill-editor/quill-editor-file-upload.component.html
@@ -22,7 +22,7 @@
 <div class="modal-body">
     <div class="pad-left" *ngIf="media" class="col-sm-12 col-md-12 col-lg-12">
         <div class="row">
-            <div *ngFor="let media of media;trackBy: trackId" class="col-sm-3 col-md-1 col-lg-1">
+            <div *ngFor="let media of media" class="col-sm-3 col-md-1 col-lg-1">
                 <a (click)="selectImage(media.url)">
                     <img src={{media.url}} alt="Image" width="100" height="100" class="img-bottom">
                 </a>
